@startuml

class Query {
    SynonymReference[] getSynonymDeclarations()
    SelectCall getQueryCall()
    QueryClause[] getClauses()
    String toString()
}

interface ICheckSemantics {
  bool isSemanticallyCorrect();
}

interface IWeight {
    void setWeight(double)
    double GetWeight()
}

class QuerySynonym {
    String GetName()
    String GetEntityType()
}

abstract SelectCall {
    SelectType GetSelectType()
    String ToString()
}
class ElemSelect {
    ElemReference[] GetReferences()
}
class BooleanSelect

abstract QueryReference{
    ReferenceType getRefType()
}
class WildcardReference
class IdentReference
class IntegerReference
abstract ElemReference {
    virtual QuerySynonym getSynonym()
}
class SynonymReference
class AttrReference  {
    AttributeType getAttribute()
}

abstract class QueryClause {
    ClauseType getClauseType()
}
abstract class SuchThatClause {
    RsType getSuchThatType()
    QueryReference getFirst()
    QueryReference getSecond()
}
class WithClause {
    Comparator getComparator()
    QueryReference getFirst()
    QueryReference getSecond()
}
class Comparator
class PatternClause  {
    SynonymReference getStmtRef()
    QueryReference getEntRef()
    ExpressionSpec getFirstExpression()
    ExpressionSpec getSecondExpression()
}

abstract ExpressionSpec {
    bool isWild()
    String toString()
}

Query *-down- SelectCall
Query *-down- QueryClause
Query *-down- SynonymReference

SelectCall <|-down- ElemSelect
SelectCall <|-down- BooleanSelect

ElemSelect <|-down- ElemReference

IWeight <|.down. QueryReference
QueryReference <|-down- IdentReference
QueryReference <|-down- IntegerReference
QueryReference <|-down- WildcardReference
QueryReference <|-down- ElemReference

ElemReference <|-down- SynonymReference
ElemReference <|-down- AttrReference
ElemReference o-right- QuerySynonym

ICheckSemantics <|.down. QueryClause

QueryClause <|-down- SuchThatClause
QueryClause <|-down- PatternClause
QueryClause <|-down- WithClause

SuchThatClause o-down- QueryReference
SuchThatClause <|-down- ParentClause
SuchThatClause <|-down- ParentTClause
SuchThatClause <|-down- FollowsClause
SuchThatClause <|-down- FollowsTClause
SuchThatClause <|-down- UsesClause
SuchThatClause <|-down- ModifiesClause
SuchThatClause <|-down- CallsClause
SuchThatClause <|-down- CallsTClause
SuchThatClause <|-down- NextClause
SuchThatClause <|-down- NextTClause
SuchThatClause <|-down- AffectsClause
SuchThatClause <|-down- AffectsTClause

PatternClause o-down- QueryReference
PatternClause o-down- SynonymReference
PatternClause *-down- ExpressionSpec

ExpressionSpec o-down- ExactExpression
ExpressionSpec o-down- WildExpression

WithClause o-down- QueryReference
WithClause *-down- Comparator
@enduml